--- a/FilemonMark.html
+++ b/FilemonMark.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower</title>
-    <link rel="stylesheet" href="Filemon Márk házi.css">
+    <link rel="stylesheet" href="FilemonMark.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link rel="icon" type="png" href="images/d8294.png">
 </head>
 <body>
     <div class="container-fluid">
         <div class="card">
-            <img class="card-img-top" src="images/flower01.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower01.jpg">
             <div class="card-body">
                 <p>Bayerische Motoren Werke AG, abbreviated as BMW, is a German multinational manufacturer of performance luxury vehicles and motorcycles headquartered in Munich, Bavaria, Germany. The corporation was founded in 1916 as a manufacturer of aircraft engines, which it produced from 1917 until 1918 and again from 1933 to 1945.</p>
             </div>
@@ -23,7 +22,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower02.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower02.jpg">
             <div class="card-body">
                 <p>Automobiles are marketed under the brands BMW, Mini and Rolls-Royce, and motorcycles are marketed under the brand BMW Motorrad. In 2017, BMW was the world's fourteenth-largest producer of motor vehicles, with 2,279,503 vehicles produced. The company has significant motor-sport history, especially in touring cars, sports cars, and the Isle of Man TT.</p>
             </div>
@@ -33,7 +32,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower03.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower03.jpg">
             <div class="card-body">
                 <p>BMW is headquartered in Munich and produces motor vehicles in Germany, Brazil, China, India, Mexico, the Netherlands, South Africa, the United Kingdom, and the United States. The Quandt family is a long-term shareholder of the company (with the remaining shares owned by public float), following investments by the brothers Herbert and Harald Quandt in 1959 which saved the company from bankruptcy.</p>
             </div>
@@ -43,7 +42,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower04.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower04.jpg">
             <div class="card-body">
                 <p>Otto Fl. was founded in 1910 by Gustav Otto in Bavaria. The firm was reorganized on 7 March 1916 into Bayerische Flugzeugwerke AG. This company was then renamed to Bayerische Motoren Werke (BMW) in 1922. However the name BMW dates back to 1913, when the original company to use the name was founded by Karl Rapp (initially as Rapp Motorenwerke GmbH).</p>
             </div>
@@ -53,7 +52,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower05.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower05.jpg">
             <div class="card-body">
                 <p>The name and Rapp Motorenwerke's engine-production assets were transferred to Bayerische Flugzeugwerke in 1922, who adopted the name the same year. BMW's first product was a straight-six aircraft engine called the BMW IIIa, designed in the spring of 1917 by engineer Max Friz.</p>
             </div>
@@ -63,7 +62,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower06.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower06.jpg">
             <div class="card-body">
                 <p>Following the end of World War I, BMW remained in business by producing motorcycle engines, farm equipment, household items and railway brakes. The company produced its first motorcycle, the BMW R 32 in 1923.</p>
             </div>
@@ -73,7 +72,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower07.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower07.jpg">
             <div class="card-body">
                 <p>BMW became an automobile manufacturer in 1928 when it purchased Fahrzeugfabrik Eisenach, which, at the time, built Austin Sevens under licence under the Dixi marque. The first car sold as a BMW was a rebadged Dixi called the BMW 3/15, following BMW's acquisition of the car manufacturer Automobilwerk Eisenach. Throughout the 1930s, BMW expanded its range into sports cars and larger luxury cars.</p>
             </div>
@@ -83,7 +82,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower08.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower08.jpg">
             <div class="card-body">
                 <p>Aircraft engines, motorcycles, and automobiles would be BMW's main products until World War II. During the war, against the wishes of its director Franz Josef Popp, BMW concentrated on aircraft engine production using as many as 40,000 slave laborers. These consisted primarily of prisoners from concentration camps, most prominently Dachau.</p>
             </div>
@@ -93,7 +92,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower09.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower09.jpg">
             <div class="card-body">
                 <p>BMW's factories were heavily bombed during the war and its remaining West German facilities were banned from producing motor vehicles or aircraft after the war. Again, the company survived by making pots, pans, and bicycles. In 1948, BMW restarted motorcycle production.</p>
             </div>
@@ -103,7 +102,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower10.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower10.jpg">
             <div class="card-body">
                 <p>BMW's factories were heavily bombed during the war and its remaining West German facilities were banned from producing motor vehicles or aircraft after the war. Again, the company survived by making pots, pans, and bicycles. In 1948, BMW restarted motorcycle production.</p>
             </div>
@@ -113,7 +112,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower11.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower11.jpg">
             <div class="card-body">
                 BMW also has local assembly operation using complete knock-down (CKD) components in Thailand, Russia, Egypt, Indonesia, Malaysia and India.
             </div>
@@ -123,7 +122,7 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="images/flower12.jpg">
+            <img class="card-img-top" alt="kép" src="images/flower12.jpg">
             <div class="card-body">
                 BMW is a charter member of the U.S. Environmental Protection Agency's (EPA) National Environmental Achievement Track, which recognizes companies for their environmental stewardship and performance.[94] It is also a member of the South Carolina Environmental Excellence Program.
             </div>
